--- a/导航.html
+++ b/导航.html
@@ -6,23 +6,81 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link rel="stylesheet" href="./navigation.css">
+    <script src="//at.alicdn.com/t/font_1039013_yzmkgdz6mff.js"></script>
+    <style type="text/css">
+        .icon {
+           width: 1em; height: 1em;
+           vertical-align: -0.15em;
+           fill: currentColor;
+           overflow: hidden;
+        }
+    </style>
 </head>
 <body>
-    <div class="topNavBar clearfix">
-        <a href="javascript:;">
-            <span class="rs">RS</span><span class="card">card</span>
-        </a>
-        <nav class="clearfix">
-            <ul>
-                <li><a href="javacript:;">关于</a></li>
-                <li><a href="javacript:;">技能</a></li>
-                <li><a href="javacript:;">作品</a></li>
-                <li><a href="javacript:;">博客</a></li>
-                <li><a href="javacript:;">日历</a></li>
-                <li><a href="javacript:;">联系方式</a></li>
-                <li><a href="javacript:;">其他</a></li>
-            </ul>
-        </nav>
+    <div class="topNavBar">
+        <div class="topNavBarInner clearfix">
+            <a href="javascript:;">
+                <span class="rs">RS</span><span class="card">card</span>
+            </a>
+            <nav class="clearfix">
+                <ul>
+                    <li><a href="javacript:;">关于</a></li>
+                    <li><a href="javacript:;">技能</a></li>
+                    <li><a href="javacript:;">作品</a></li>
+                    <li><a href="javacript:;">博客</a></li>
+                    <li><a href="javacript:;">日历</a></li>
+                    <li><a href="javacript:;">联系方式</a></li>
+                    <li><a href="javacript:;">其他</a></li>
+                </ul>
+            </nav>
+        </div>
     </div>
+    <div class="banner">
+        <div class="mask"></div>
+    </div>
+    <main>
+        <div class="userCard ">
+            <div class="pitureAndText clearfix">
+                <div class="piture">
+                    <img src="./avatar.jpg" width="299" height="347" alt="头像">
+                </div>
+                <div class="text">
+                    <span class="hello">Hello
+                        <span class="triangle"></span>
+                    </span>
+                    <h1>YJQ</h1>
+                    <p>前端开发工程师</p>
+                    <hr>
+                    <dl class="clearfix">
+                        <dt>年龄</dt>
+                        <dd>18</dd>
+                        <dt>所在城市</dt>
+                        <dd>广州</dd>
+                        <dt>邮箱</dt>
+                        <dd>759346463@qq.com</dd>
+                        <dt>手机</dt>
+                        <dd>13512345678</dd>
+                    </dl>
+                </div>
+            </div>
+            <footer class="media">
+                <a href="#">
+                    <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-github"></use>
+                    </svg>
+                </a>
+                <a href="#">
+                    <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-zhihu"></use>
+                    </svg>
+                </a>
+                <a href="#">
+                    <svg class="icon" aria-hidden="true" >
+                        <use xlink:href="#icon-jianshu"></use>
+                    </svg>
+                </a>
+            </footer>
+        </div>
+    </main>
 </body>
 </html>
