--- a/导航.html
+++ b/导航.html
@@ -49,7 +49,7 @@
                         <span class="triangle"></span>
                     </span>
                     <h1>YJQ</h1>
-                    <p>前端开发工程师</p>
+                    <p>前端开发工程师11</p>
                     <hr>
                     <dl class="clearfix">
                         <dt>年龄</dt>
@@ -81,6 +81,82 @@
                 </a>
             </footer>
         </div>
+        <div class="downloadResumeWrapper">
+            <a class="downloadResume" href="./README.md" target="_blank" download>下载 PDF 简历</a>
+        </div>
+        <p class="abstract">YJQ， 初级前端工程师，应届毕业生。 
+            <br>技能：前端开发，Rails 开发，Node.js 开发
+        </p>
     </main>
+    <section class="skills">
+        <h2>技能</h2>
+        <ol class="skillsList clearfix">
+            <li>HTML 5 & CSS 3
+                <div class="progressBar">
+                    <div class="progressBarInner" style="width: 70%;"></div>
+                </div>
+            </li>
+            <li>Javascript
+                    <div class="progressBar">
+                            <div class="progressBarInner" style="width: 60%;"></div>
+                    </div>
+            </li>
+            <li>jQuery
+                    <div class="progressBar">
+                            <div class="progressBarInner" style="width: 40%;"></div>
+                    </div>
+            </li>
+            <li>Vue.js
+                    <div class="progressBar">
+                            <div class="progressBarInner" style="width: 80%;"></div>
+                    </div>
+            </li>
+            <li>React.js
+                    <div class="progressBar">
+                            <div class="progressBarInner" style="width: 20%;"></div>
+                    </div>
+            </li>
+            <li>Node.js
+                    <div class="progressBar" >
+                            <div class="progressBarInner" style="width: 20%;"></div>
+                    </div>
+            </li>
+        </ol>
+    </section>
+    <section class="portfolio">
+        <h2>作品集</h2>
+        <nav>
+            <ol class="clearfix">
+                <li id="portfolio1">所有</li>
+                <li id="portfolio2">框架</li>
+                <li id="portfolio3">原生JS&CSS</li>
+            </ol>
+                <div id="navigationInnerId" class="navigation state-1">
+                        <div  class="navigationInner"></div>
+                </div>
+        </nav>
+        <div class="works">
+           <div class="big">
+               <img src="./1.jpg" alt="作品1">
+           </div>
+           <div class="small" style="right:0;">
+            <img src="./2.jpg" alt="作品2">
+            </div>
+            <div class="small" style="right:0;bottom: -3px;">
+            <img src="./3.jpg" alt="作品3">
+            </div>
+        </div>
+    </section>
+    <script>
+        portfolio1.onclick = function(){
+            navigationInnerId.className = "navigation state-1";
+        }
+        portfolio2.onclick = function(){
+            navigationInnerId.className = "navigation state-2";
+        }
+        portfolio3.onclick = function(){
+            navigationInnerId.className = "navigation state-3";
+        }
+    </script>
 </body>
 </html>
