--- a/index.html
+++ b/index.html
@@ -1,12 +1,188 @@
 <!DOCTYPE html>
-<html lang="zh-Hans">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="./navigation.css">
+    <script src="//at.alicdn.com/t/font_1039013_yzmkgdz6mff.js"></script>
+    <link rel="stylesheet" href="loading.css">
+    <style type="text/css">
+        .icon {
+           width: 1em; height: 1em;
+           vertical-align: -0.15em;
+           fill: currentColor;
+           overflow: hidden;
+        }
+        .site-welcome{
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: white;
+            display: none;
+            z-index: 10;
+            margin: 0 auto;
+            justify-content:center;
+            align-items:center;
+        }
+        .active{
+            display: flex;
+        }
+    </style>
 </head>
 <body>
-    <h1>hello</h1>
+    <div id="siteWelcome"class="site-welcome active">
+        <div class="loading"></div>
+    </div>
+    <div class="topNavBar">
+        <div class="topNavBarInner clearfix">
+            <a href="javascript:;">
+                <span class="rs">RS</span><span class="card">card</span>
+            </a>
+            <nav class="clearfix">
+                <ul>
+                    <li><a href="javacript:;">关于</a></li>
+                    <li><a href="javacript:;">技能</a></li>
+                    <li><a href="javacript:;">作品</a></li>
+                    <li><a href="javacript:;">博客</a></li>
+                    <li><a href="javacript:;">日历</a></li>
+                    <li><a href="javacript:;">联系方式</a></li>
+                    <li><a href="javacript:;">其他</a></li>
+                </ul>
+            </nav>
+        </div>
+    </div>
+    <div class="banner">
+        <div class="mask"></div>
+    </div>
+    <main>
+        <div class="userCard ">
+            <div class="pitureAndText clearfix">
+                <div class="piture">
+                    <img src="./avatar.jpg" width="299" height="347" alt="头像">
+                </div>
+                <div class="text">
+                    <span class="hello">Hello
+                        <span class="triangle"></span>
+                    </span>
+                    <h1>YJQ</h1>
+                    <p>前端开发工程师11</p>
+                    <hr>
+                    <dl class="clearfix">
+                        <dt>年龄</dt>
+                        <dd>18</dd>
+                        <dt>所在城市</dt>
+                        <dd>广州</dd>
+                        <dt>邮箱</dt>
+                        <dd>759346463@qq.com</dd>
+                        <dt>手机</dt>
+                        <dd>13512345678</dd>
+                    </dl>
+                </div>
+            </div>
+            <footer class="media">
+                <a href="#">
+                    <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-github"></use>
+                    </svg>
+                </a>
+                <a href="#">
+                    <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-zhihu"></use>
+                    </svg>
+                </a>
+                <a href="#">
+                    <svg class="icon" aria-hidden="true" >
+                        <use xlink:href="#icon-jianshu"></use>
+                    </svg>
+                </a>
+            </footer>
+        </div>
+        <div class="downloadResumeWrapper">
+            <a class="downloadResume" href="./README.md" target="_blank" download>下载 PDF 简历</a>
+        </div>
+        <p class="abstract">YJQ， 初级前端工程师，应届毕业生。 
+            <br>技能：前端开发，Rails 开发，Node.js 开发
+        </p>
+    </main>
+    <section class="skills">
+        <h2>技能</h2>
+        <ol class="skillsList clearfix">
+            <li>HTML 5 & CSS 3
+                <div class="progressBar">
+                    <div class="progressBarInner" style="width: 70%;"></div>
+                </div>
+            </li>
+            <li>Javascript
+                    <div class="progressBar">
+                            <div class="progressBarInner" style="width: 60%;"></div>
+                    </div>
+            </li>
+            <li>jQuery
+                    <div class="progressBar">
+                            <div class="progressBarInner" style="width: 40%;"></div>
+                    </div>
+            </li>
+            <li>Vue.js
+                    <div class="progressBar">
+                            <div class="progressBarInner" style="width: 80%;"></div>
+                    </div>
+            </li>
+            <li>React.js
+                    <div class="progressBar">
+                            <div class="progressBarInner" style="width: 20%;"></div>
+                    </div>
+            </li>
+            <li>Node.js
+                    <div class="progressBar" >
+                            <div class="progressBarInner" style="width: 20%;"></div>
+                    </div>
+            </li>
+        </ol>
+    </section>
+    <section class="portfolio">
+        <h2>作品集</h2>
+        <nav>
+            <ol class="clearfix">
+                <li id="portfolio1">所有</li>
+                <li id="portfolio2">框架</li>
+                <li id="portfolio3">原生JS&CSS</li>
+            </ol>
+                <div id="navigationInnerId" class="navigation state-1">
+                        <div  class="navigationInner"></div>
+                </div>
+        </nav>
+        <div class="works">
+           <div class="big">
+               <img src="./1.jpg" alt="作品1">
+           </div>
+           <div class="small" style="right:0;">
+            <img src="./2.jpg" alt="作品2">
+            </div>
+            <div class="small" style="right:0;bottom: -3px;">
+            <img src="./3.jpg" alt="作品3">
+            </div>
+        </div>
+    </section>
+    <script>
+        portfolio1.onclick = function(){
+            navigationInnerId.className = "navigation state-1";
+        }
+        portfolio2.onclick = function(){
+            navigationInnerId.className = "navigation state-2";
+        }
+        portfolio3.onclick = function(){
+            navigationInnerId.className = "navigation state-3";
+        }
+    </script>
+    <script>
+        var div = document.getElementById('siteWelcome')
+        setTimeout(function(){
+            div.classList.remove('active')
+        },2000)
+    </script>
 </body>
 </html>
