--- a/index.html
+++ b/index.html
@@ -206,10 +206,10 @@
         }
     </script>
     <script>
-        var div = document.getElementById('siteWelcome')
-        setTimeout(function(){
-            div.classList.remove('active')
-        },1000)
+        // var div = document.getElementById('siteWelcome')
+        // setTimeout(function(){
+        //     div.classList.remove('active')
+        // },1000)
     </script>
     <script src="index.js"></script>
 </body>
